Fix size & alignment of circle highlighting current day in calendar

--- a/polls/static/polls/src/scss/week_calendar.scss
+++ b/polls/static/polls/src/scss/week_calendar.scss
@@ -69,13 +69,14 @@ $calendar-border: 1px solid $color-neutral-300;
       content: "";
       display: block;
       position: absolute;
-      top: 2px;
+      top: 5px;
       left: 0px;
       right: 0px;
       margin: 0px auto;
-      width: 80px;
-      height: 80px;
-      border-radius: 40px;
+      max-width: 75px;
+      width: 90%;
+      height: 75px;
+      border-radius: 50%;
       background: $color-brand-200;
       z-index: -1;
     }
